tests/format/misc/errors/js/discard-binding/invalid-array-expression.js
([[[void], x, ], y]);

([[[x], void, ], y]);

([[[x], y, ], void]);

([void, x = 0]);

async([void, x = 0]);
